# gsd-2

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.gsd/: STATE.md
native/crates/engine/: Cargo.toml
native/crates/engine/src/: lib.rs
src/resources/extensions/gsd/: auto.ts  files.ts  git-service.ts  native-git-bridge.ts  preferences.ts  state.ts  worktree-manager.ts
src/resources/extensions/gsd/prompts/: complete-milestone.md  complete-slice.md  discuss.md  execute-task.md  guided-complete-slice.md  guided-discuss-milestone.md  guided-discuss-slice.md  guided-execute-task.md  guided-plan-milestone.md  guided-plan-slice.md  guided-research-slice.md  plan-milestone.md  plan-slice.md  queue.md  research-milestone.md  research-slice.md
src/resources/extensions/subagent/: index.ts
src/tests/: extension-smoke.test.ts
